--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>To-Do List</h1>
-        <input type="text" id="new-task" placeholder="Add a new task">
-        <button id="add-task">Add Task</button>
-        <ul id="task-list"></ul>
-    </div>
+    <header>
+        <h1>My Web App</h1>
+    </header>
+    <main>
+        <div class="container">
+            <h2>App description</h2>
+            <input type="text" id="new-task" placeholder="Add a new task">
+            <button id="add-task">Add Task</button>
+            <ul id="task-list"></ul>
+        </div>
+    </main>
+    <footer>
+        <p>App links</p>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
